nginx-canary/based-header/ingress-v2-canary.yaml
# Work in progress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-canary
  namespace: canary
  labels:
    app: my-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "Device"
    nginx.ingress.kubernetes.io/canary-by-header-pattern: "ios|android"
spec:
  rules:
  - host: k8s.local
    http:
      paths:
      - path: /
        backend:
          serviceName: my-app-v2
          servicePort: 80
